install react-multi-carousel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/dist/output.css" />
 		<title>Vite + React</title>
 	</head>
-	<body class="dark:bg-slate-900">
+	<body class="dark:bg-slate-900 dark:text-slate-200">
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
